syntax = "proto3";

package pama1234.util.protobuf;

option java_package = "pama1234.util.protobuf";
option java_outer_classname="InputDataProto";

option csharp_namespace = "Pama1234.Util.Protobuf";

option optimize_for = LITE_RUNTIME;

message InputData {
  float dx = 1;
  float dy = 2;
  bool isUpPressed = 3;
  bool isDownPressed = 4;
  bool isLeftPressed = 5;
  bool isRightPressed = 6;
  bool isZPressed = 7;
  bool isXPressed = 8;
  bool isCPressed = 9;
}